Add handler name to handlers and change name "user" to "auth"
